{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 69,
  "lineage": "65d2a9f8-3a83-4a97-f7c0-72f0adc5daf5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:902597156026:targetgroup/dev-app-eks-nodes-tg/067758f60c0b95b0",
            "arn_suffix": "targetgroup/dev-app-eks-nodes-tg/067758f60c0b95b0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:902597156026:targetgroup/dev-app-eks-nodes-tg/067758f60c0b95b0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-app-eks-nodes-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "LoadBalancer",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-eks-nodes-tg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "owned",
              "kubernetes.io/service-name": "default/example-service"
            },
            "tags_all": {
              "Component": "LoadBalancer",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-eks-nodes-tg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "owned",
              "kubernetes.io/service-name": "default/example-service"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:security-group/sg-00404c762e403fab1",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00404c762e403fab1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-app-alb20250724013702896000000002",
            "name_prefix": "dev-app-alb",
            "owner_id": "902597156026",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "LoadBalancer",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-alb-sg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "LoadBalancer",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-alb-sg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:security-group/sg-0aa8580607cd46ce9",
            "description": "Security group for bastion host access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa8580607cd46ce9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-app-bastion20250724013702111400000001",
            "name_prefix": "dev-app-bastion",
            "owner_id": "902597156026",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Security",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-bastion-sg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Security",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-bastion-sg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_extended",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:security-group/sg-0b685ccd5bce00013",
            "description": "Security group for monitoring services (Prometheus, Grafana etc.)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b685ccd5bce00013",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Node Exporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "dev-app-dev-monitoring20250724013703632900000003",
            "name_prefix": "dev-app-dev-monitoring",
            "owner_id": "902597156026",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Monitoring",
              "Name": "dev-app-dev-monitoring-sg"
            },
            "tags_all": {
              "Component": "Monitoring",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-dev-monitoring-sg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:security-group/sg-0620415ece9eda1a0",
            "description": "Security group for VPC endpoints",
            "egress": [],
            "id": "sg-0620415ece9eda1a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS from VPC (UDP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS from VPC",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-app-dev-vpc-endpoints20250724013704384400000004",
            "name_prefix": "dev-app-dev-vpc-endpoints",
            "owner_id": "902597156026",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "VPCEndpoints",
              "Name": "dev-app-dev-vpc-endpoints-sg"
            },
            "tags_all": {
              "Component": "VPCEndpoints",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-dev-vpc-endpoints-sg",
              "Owner": "DevSecOps Team",
              "Project": "dev-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3bef0ba3dfb14b0",
            "domain": "vpc",
            "id": "eipalloc-0d3bef0ba3dfb14b0",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-204-47.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.204.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-nat-eip-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-nat-eip-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:internet-gateway/igw-003f279582b571b9d",
            "id": "igw-003f279582b571b9d",
            "owner_id": "902597156026",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-igw",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-igw",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:route-table/rtb-0358a146d4e924311",
            "id": "rtb-0358a146d4e924311",
            "owner_id": "902597156026",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-rt",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Type": "Database"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-rt",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Type": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:route-table/rtb-0af3e4d32b16be537",
            "id": "rtb-0af3e4d32b16be537",
            "owner_id": "902597156026",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003f279582b571b9d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-rt",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-rt",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032735ab671b15917",
            "route_table_id": "rtb-0358a146d4e924311",
            "subnet_id": "subnet-0413ad211a8d594f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0083c50ed67172bbf",
            "route_table_id": "rtb-0358a146d4e924311",
            "subnet_id": "subnet-088251dca4761e4d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea8210b52edc161f",
            "route_table_id": "rtb-0af3e4d32b16be537",
            "subnet_id": "subnet-01a443dcc54946d57"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0936dd8660b00a647",
            "route_table_id": "rtb-0af3e4d32b16be537",
            "subnet_id": "subnet-0b79b093a4fc9404b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:subnet/subnet-0413ad211a8d594f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0413ad211a8d594f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902597156026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-subnet-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-subnet-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:subnet/subnet-088251dca4761e4d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088251dca4761e4d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902597156026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-subnet-2",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-subnet-2",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:subnet/subnet-0c5c8d065ef2253d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5c8d065ef2253d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902597156026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-subnet-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private",
              "kubernetes.io/cluster/dev-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-subnet-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private",
              "kubernetes.io/cluster/dev-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:subnet/subnet-012bb5130c8736c12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012bb5130c8736c12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902597156026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-subnet-2",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private",
              "kubernetes.io/cluster/dev-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-subnet-2",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private",
              "kubernetes.io/cluster/dev-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:subnet/subnet-01a443dcc54946d57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a443dcc54946d57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902597156026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-subnet-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-subnet-1",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:subnet/subnet-0b79b093a4fc9404b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b79b093a4fc9404b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902597156026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-subnet-2",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-subnet-2",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-0097d5632100084a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:902597156026:vpc/vpc-0097d5632100084a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f79099ff5088547",
            "default_route_table_id": "rtb-09b9bfec8270cf65a",
            "default_security_group_id": "sg-035cef8f3163ac452",
            "dhcp_options_id": "dopt-0b5003822d4062ecb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0097d5632100084a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b9bfec8270cf65a",
            "owner_id": "902597156026",
            "tags": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "ManagedBy": "Terraform",
              "Name": "dev-app-vpc",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Type": "Main VPC"
            },
            "tags_all": {
              "Component": "Networking",
              "CostCenter": "default-cost-center",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-vpc",
              "Owner": "DevSecOps Team",
              "Project": "dev-app",
              "Terraform": "true",
              "Type": "Main VPC"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}